--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,4 @@
 ---
 title: "Yingqi Wang"
+image: images/Yingqi_Wang
 ---
-
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
